Misc cleanup/javadocs